--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1",
+    "styled-normalize": "^8.0.7"
   },
   "eslintConfig": {
     "extends": [
