--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@babel/preset-react": "^7.12.7",
     "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
+    "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
@@ -37,9 +39,15 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
   },
@@ -53,5 +61,6 @@
     "last 2 versions",
     "IE 10",
     "Firefox > 20"
-  ]
+  ],
+  "proxy": "http://laravel-api.sjahn.gtz.kr/api/"
 }
