--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "eslint": "^7.19.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -48,10 +47,9 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
-    "styled-reset": "^4.3.4"
+    "styled-normalize": "^8.0.7"
   },
   "eslintConfig": {
     "extends": [
@@ -63,5 +61,6 @@
     "last 2 versions",
     "IE 10",
     "Firefox > 20"
-  ]
+  ],
+  "proxy": "http://laravel-api.sjahn.gtz.kr/api/"
 }
